--- a/src/styles/_objects.buttons.scss
+++ b/src/styles/_objects.buttons.scss
@@ -19,11 +19,16 @@
   border-radius: 50px;
   white-space: nowrap;
 
-  &:focus,
-  &:hover,
   &.is-active {
     color: $color-hover;
     background-color: $bg-color-hover;
+  }
+
+  @include media('>small') {
+    &:hover {
+      color: $color-hover;
+      background-color: $bg-color-hover;
+    }
   }
 }
 
@@ -36,10 +41,14 @@
 
   border: 1px solid $c-pink;
 
-  &:focus,
-  &:hover,
   &.is-active {
     border-color: $c-red;
+  }
+
+  @include media('>small') {
+    &:hover {
+      border-color: $c-red;
+    }
   }
 }
 
